@@ -7,6 +7,8 @@ CHANGES
 
 - Added needed but not declated test dependency on ``zope.app.container``.
 
+- Using Python's ``doctest`` module instead of depreacted
+  ``zope.testing.doctest``.
 
 1.1.0 (2009-05-29)
 ------------------
